# nova-tune

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
Source/: PluginEditor.h  Utilities.h
Source/dsp/: FormantProcessor.h  LeadCorrection.cpp  LeadCorrection.h  PitchMapper.cpp  TunerEngine.h
notes/: NovaTune-TODO.md  functional-technical-specs.md  skeleton-for-classes.md
plugin/: ARCHITECTURE_GUIDE.md  CMakeLists.txt  README.md  cmake_install.cmake  setup_linux_dependencies.sh
plugin/.cache/clangd/index/: AlternateSet.hh.E03CFAEA032C49D1.idx  AlternateSubst.hh.C5AD195A5A550D04.idx  AlternateSubstFormat1.hh.71BD41E361C4D228.idx  Anchor.hh.7DE8E4B1AAE6C079.idx  AnchorFormat1.hh.CFBB201DB850D4E6.idx  AnchorFormat2.hh.29867C3E8C663E9D.idx  AnchorFormat3.hh.88F3FAC5241AB670.idx  AnchorMatrix.hh.112ADA117C4269C8.idx  BidiChain.c.E27B27ACA5FB8F16.idx  BidiChain.h.8BC5867D2CA44B58.idx  BidiTypeLookup.c.5240C681CA1A89E9.idx  BidiTypeLookup.h.E39F211110F1B12C.idx  BracketQueue.c.537641D7AE22D57B.idx  BracketQueue.h.E2AEE84A7A2C5CB4.idx  BracketType.h.EBFD86DD4159D4C8.idx  CBDT.hh.4D8470A2DDD98DF3.idx  COLR.hh.2D2F716CAF21DAB8.idx  CPAL.hh.1B02CB9F6A7F6203.idx  ChainContextPos.hh.64424B374B9B4875.idx  ChainContextSubst.hh.DF11B42783724804.idx  Common.hh.6FF265B051569AE5.idx  Common.hh.DCAE2BC0C83526B1.idx  CompositeGlyph.hh.6B5384889A7EF426.idx  ContextPos.hh.AD807C0EA65B6F44.idx  ContextSubst.hh.E4098658DE700828.idx  Coverage.hh.6E6A31506E6836E1.idx  CoverageFormat1.hh.B593E333875AD889.idx  CoverageFormat2.hh.9154D8E9D712A427.idx  CursivePos.hh.C612DB174ECC94AD.idx  CursivePosFormat1.hh.CE0F705456667053.idx  DSPConfig.h.49E9BECAC250E2E5.idx  ExtensionPos.hh.926012E0B628B33A.idx  ExtensionSubst.hh.014DC807B354547A.idx  FormantProcessor.cpp.E6353275FC20664F.idx  FormantProcessor.h.66A77136075B0127.idx  GDEF.hh.A71EDAF23C17D5CA.idx  GPOS.hh.D52ABBBEA7485030.idx  GSUB.hh.BDB45A2EA589D3B8.idx  GeneralCategoryLookup.c.9F76424584513D93.idx  GeneralCategoryLookup.h.8AC9B0EE1D992776.idx  (+1786 more)
plugin/JUCE/: JUCEConfig.cmake  JUCEExportConfig.cmake  Makefile  cmake_install.cmake
plugin/JUCE/modules/: Makefile  cmake_install.cmake
plugin/JUCE/tools/: CMakeCache.txt  JUCEConfig.cmake  JUCEConfigVersion.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
plugin/JUCE/tools/modules/: Makefile  cmake_install.cmake
plugin/Source/: DSPConfig.h  ParameterIDs.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  Utilities.cpp  Utilities.h
plugin/Source/dsp/: FormantProcessor.cpp  HarmonyVoice.cpp  HarmonyVoice.h  LeadCorrection.cpp  PitchDetector.cpp  PitchDetector.h  PitchMapper.h  PitchShifter.cpp  PitchShifter.h  TunerEngine.cpp
